--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,34 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "pihole6api"
 version = "0.1.0"
-description = "A Python API client for Pi-hole 6."
-authors = [{ name = "Shane Barbetta", email = "shane@barbetta.me" }]
-license = { file = "LICENSE" }
+description = "Python API Client for Pi-hole 6"
+authors = [{name = "Shane Barbetta", email = "shane@barbetta.me"}]
+license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = [
-    "requests>=2.25.0"
+keywords = ["pihole", "dns", "adblocking", "api", "client"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 
-[project.optional-dependencies]
-dev = ["pytest", "ruff", "mypy"]
+dependencies = [
+    "requests >=2.26.0",
+]
 
-[tool.setuptools]
-packages = ["pihole6api"]
-package-dir = { "" = "src" }
-
-[tool.setuptools.package-data]
-pihole6api = ["*.py"] 
-
-[tool.ruff]
-line-length = 100
-
-[tool.mypy]
-strict = true
+[project.urls]
+Homepage = "https://github.com/sbarbett/pihole6api"
+Documentation = "https://github.com/sbarbett/pihole6api"
+Source = "https://github.com/sbarbett/pihole6api"
+Issues = "https://github.com/sbarbett/pihole6api/issues"
