--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore .zip so people don't accidentally commit their settings
 *.zip
 
+# Ignore backup files
+*.old
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
