Add comprehensive Docker-based testing infrastructure
## Testing Infrastructure Improvements

### Docker-Based Integration Testing
- Added Docker Compose setup for real Pi-hole testing (v6 2024.07.0)
- Created PiHoleDockerTestManager for container lifecycle management
- Implemented health checks and automatic startup/cleanup

### Comprehensive Test Suite
- Unit tests with mocking for authentication functionality
- Integration tests using real Pi-hole Docker container
- Local DNS management tests with full CRUD operations
- Performance and bulk operation tests
- Export functionality tests (JSON/CSV)

### Test Organization
- Separated unit tests (fast, mocked) from integration tests (real Pi-hole)
- Added pytest configuration with markers (unit, integration, slow)
- Created test runners for both traditional and Docker-based testing
- Updated Makefile with Docker test targets

### Key Features
- Automatic Docker container management
- Real API testing against Pi-hole v6
- Comprehensive authentication testing (success, failure, session management)
- Full local DNS record lifecycle testing
- Export and search functionality validation
- Bulk operations and performance testing

### Test Files Added
- tests/test_authentication.py - Authentication mechanism tests
- tests/test_local_dns.py - Local DNS management tests
- tests/test_integration.py - Mocked integration tests
- tests/test_real_integration.py - Docker-based real integration tests
- tests/docker_test_manager.py - Docker container management
- tests/docker-compose.test.yml - Pi-hole test container setup
- run_tests_docker.py - Docker test runner
- Updated Makefile with Docker testing targets

This infrastructure enables reliable testing of both the improved library
functionality and ensures compatibility with real Pi-hole v6 instances.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -27,8 +27,32 @@ dependencies = [
     "requests >=2.26.0",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest >=6.0",
+    "pytest-cov >=3.0.0",
+    "pytest-mock >=3.6.0",
+    "coverage >=6.0",
+]
+dev = [
+    "pytest >=6.0",
+    "pytest-cov >=3.0.0",
+    "pytest-mock >=3.6.0",
+    "coverage >=6.0",
+    "black >=22.0",
+    "isort >=5.0",
+    "flake8 >=4.0",
+    "mypy >=0.900",
+]
+
 [project.urls]
 Homepage = "https://github.com/sbarbett/pihole6api"
 Documentation = "https://github.com/sbarbett/pihole6api"
 Source = "https://github.com/sbarbett/pihole6api"
 Issues = "https://github.com/sbarbett/pihole6api/issues"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-dir]
+"" = "src"
