refactor: Replace hardcoded test values with environment configuration
- Update docker_test_manager.py to load configuration from .env.test
- Replace hardcoded URLs, passwords, and timeouts with environment variables
- Refactor test_real_integration.py to use configurable test data
- Replace hardcoded domains (test.local) with TEST_DOMAIN_BASE
- Replace hardcoded IPs (192.168.99.x) with TEST_IP_BASE + offsets
- Update .env.test with organized, documented configuration variables
- All 10 test categories still passing (31.93s execution time)
- Improves maintainability and test environment flexibility

--- a/tests/.env.test
+++ b/tests/.env.test
@@ -4,6 +4,7 @@
 PIHOLE_TEST_URL=http://localhost:42345
 PIHOLE_TEST_PASSWORD=test_password_123
 PIHOLE_TEST_CONTAINER_NAME=pihole-test
+PIHOLE_DOCKER_COMPOSE_FILE=docker-compose.test.yml
 
 # Test timeouts and retries
 PIHOLE_TEST_STARTUP_TIMEOUT=60
@@ -13,3 +14,33 @@ PIHOLE_TEST_HEALTH_CHECK_INTERVAL=5
 # Test data configuration
 TEST_DOMAIN_BASE=test.local
 TEST_IP_BASE=192.168.99
+
+# Specific test IP addresses and settings
+TEST_A_RECORD_IP_START=100          # For test_03: A record tests
+TEST_A_RECORD_IP_UPDATE=101         # For test_03: A record update test
+TEST_STATS_IP_1=201                 # For test_05: Statistics test IP 1
+TEST_STATS_IP_2=202                 # For test_05: Statistics test IP 2  
+TEST_BULK_COUNT=10                  # For test_08: Number of bulk records
+TEST_BULK_IP_START=150              # For test_08: Starting IP for bulk test
+TEST_WORKFLOW_IP=250                # For test_10: Workflow validation IP
+
+# Pre-populated test data (for setup_test_data)  
+PRELOAD_SERVER1_IP=10               # 192.168.99.10
+PRELOAD_SERVER2_IP=11               # 192.168.99.11  
+PRELOAD_NAS_IP=20                   # 192.168.99.20
+
+# Test execution settings
+VERBOSE_OUTPUT=false
+PARALLEL_EXECUTION=false
+STOP_ON_FAILURE=false
+
+# Performance test settings
+PERFORMANCE_TIMEOUT=30
+
+# Export test settings
+EXPORT_TEST_FORMATS=json,csv
+TEMP_EXPORT_DIR=/tmp/pihole-test-exports
+
+# Docker network settings
+DOCKER_NETWORK_NAME=pihole-test-network
+DOCKER_CLEANUP_ON_EXIT=true
